src/test/deca/context/invalid/provided/operation_boolean_entier.deca
// Description:
//    Opération arithmétique entre un booléen et un entier.
//
// Resultats:
//    operation_boolean_entier.deca:14:8: Type mismatch: the left operand is of type int while the right operand is of type booelan
//
// Historique:
//    cree le 11/01/2025
{
int a = 5;
boolean b = true;

// Doit etre refuse.
int c = a + b;
}
